# clipping

./: .gitignore  Business.cpp  Business.h  CMakeLists.txt  Display.cpp  Display.h  Filler.cpp  Filler.h  GUI.cpp  GUI.h  Polygon.h  README.md  Scene.cpp  Scene.h  clipper.cpp  clipper.h  clipping.cpp  clipping.h  main.cpp
